# aws-cicd-demo

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: cd.yml  ci-build.yml  db-bootstrap-cd.yml  db-cd.yml  db-ci.yml  db-refresh-cd.yml  test.yml
db/: liquibase.properties
db/changelog/: master.yaml
db/changelog/bootstrap/: R-000-roles.sql
db/changelog/customer/: 001-init-customer.sql  R-customer-views-and-grants.sql
db/changelog/orders/: 001-init-orders.sql  002-add-order-status.sql  003-idx-orders-customer-date.sql  004-ux-orders-customer-date-sku.sql
db/changelog/procedures/: 004-proc-recalc-customer-stats.sql
db/changelog/products/: 001-init-products.sql  002-insert-products.sql  003-fk-orders-product_sku.sql  R-product-views-and-grants.sql
db/changelog/shared/: 000-prereqs-and-extensions.sql  001-roles.sql
db/changelog/shared/-- db/changelog/shared/: 001-roles.sql
db/post_deploy/: insert_minimal_data.sql
src/: retail.py
src/dq_utils/: __init__.py  dq_checks.py
tests/: test_dq_checks.py  test_retail_integration.py
