[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dq-utils"
version = "0.1.0"
description = "Reusable data quality checks (uniqueness, nulls)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dq_utils*"]
